--- a/Express/package.json
+++ b/Express/package.json
@@ -17,6 +17,7 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.4",
     "passport": "^0.7.0",
